gcc/testsuite/rust/rustc/ui/error-codes/E0608.rs
fn main() {
    0u8[2]; // { dg-error ".E0608." "" { target *-*-* } }
}

